// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`titresEtapesAreasUpdate met à jour les communes, forêts et zone du SDOM sur une étape 1`] = `
Array [
  Object {
    "communeId": "97358",
    "surface": 292012,
    "titreEtapeId": "titreEtapeIdUniquePourMiseAJourAreas",
  },
  Object {
    "communeId": "97312",
    "surface": 716357,
    "titreEtapeId": "titreEtapeIdUniquePourMiseAJourAreas",
  },
]
`;

exports[`titresEtapesAreasUpdate met à jour les communes, forêts et zone du SDOM sur une étape 2`] = `
Array [
  Object {
    "foretId": "DBR",
    "titreEtapeId": "titreEtapeIdUniquePourMiseAJourAreas",
  },
]
`;

exports[`titresEtapesAreasUpdate met à jour les communes, forêts et zone du SDOM sur une étape 3`] = `
Array [
  Object {
    "sdomZoneId": "1",
    "titreEtapeId": "titreEtapeIdUniquePourMiseAJourAreas",
  },
]
`;

exports[`titresEtapesAreasUpdate met à jour les communes, forêts et zone du SDOM sur une étape 4`] = `
Array [
  Object {
    "archive": false,
    "communes": Array [
      Object {
        "departementId": "973",
        "id": "97312",
        "nom": "Sinnamary",
        "surface": 716357,
      },
      Object {
        "departementId": "973",
        "id": "97358",
        "nom": "Saint-Élie",
        "surface": 292012,
      },
    ],
    "contenu": null,
    "date": "2022-03-09",
    "dateDebut": null,
    "dateFin": null,
    "decisionsAnnexesContenu": null,
    "decisionsAnnexesSections": null,
    "duree": null,
    "forets": Array [
      Object {
        "id": "DBR",
        "nom": "Deux Branches",
      },
    ],
    "heritageContenu": null,
    "heritageProps": null,
    "id": "titreEtapeIdUniquePourMiseAJourAreas",
    "incertitudes": null,
    "ordre": null,
    "sdomZones": Array [
      Object {
        "id": "1",
        "nom": "Zone 1",
      },
    ],
    "slug": "titreDemarcheIdUniquePourMiseAJourAreas-mfr99",
    "statutId": "aco",
    "substances": Array [],
    "surface": null,
    "titreDemarcheId": "titreDemarcheIdUniquePourMiseAJourAreas",
    "typeId": "mfr",
  },
]
`;

exports[`titresEtapesAreasUpdate met à jour les communes, forêts et zone du SDOM sur une étape 5`] = `
Array [
  Object {
    "archive": false,
    "communes": Array [
      Object {
        "departementId": "973",
        "id": "97312",
        "nom": "Sinnamary",
        "surface": 716357,
      },
      Object {
        "departementId": "973",
        "id": "97358",
        "nom": "Saint-Élie",
        "surface": 292012,
      },
    ],
    "contenusTitreEtapesIds": null,
    "coordonnees": null,
    "dateDebut": null,
    "dateDemande": null,
    "dateFin": null,
    "domaineId": "m",
    "doublonTitreId": null,
    "entreprisesLecture": false,
    "forets": Array [
      Object {
        "id": "DBR",
        "nom": "Deux Branches",
      },
    ],
    "id": "titreIdUniquePourMiseAJourAreas",
    "nom": "nom-titreIdUniquePourMiseAJourAreas",
    "propsTitreEtapesIds": Object {
      "points": "titreEtapeIdUniquePourMiseAJourAreas",
    },
    "publicLecture": false,
    "sdomZones": Array [
      Object {
        "id": "1",
        "nom": "Zone 1",
      },
    ],
    "slug": "slug-titreIdUniquePourMiseAJourAreas",
    "statutId": "val",
    "typeId": "arm",
  },
]
`;
